--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -37,14 +37,14 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/ivProfileImage"
+                    android:id="@+id/btnProfileImageProfile"
                     android:layout_width="36dp"
                     android:layout_height="36dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="16dp"
                     android:elevation="4dp"
-                    android:src="@drawable/tzuyu"
+                    android:src="@mipmap/tzuyu"
                     app:civ_border_color="#FFFFFF"
                     app:civ_border_width="1dp"
                     app:layout_constraintEnd_toEndOf="parent"
