--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -25,34 +25,43 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/txtChineseCharacter"
-                android:layout_width="200dp"
-                android:layout_height="128dp"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center|center_horizontal|center_vertical"
-                android:text="@string/phrase_placeholder"
-                android:textAlignment="center"
-                android:textSize="64dp" />
-
-            <TextView
-                android:id="@+id/txtProgress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/progress_placeholder"
-                android:textAlignment="textStart" />
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/txtChineseCharacter"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginEnd="50dp"
+                    android:gravity="center|center_horizontal|center_vertical"
+                    android:text="@string/phrase_placeholder"
+                    android:textAlignment="center"
+                    android:textSize="64dp"
+                    app:layout_constraintBottom_toTopOf="@+id/txtProgress"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/txtProgress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/progress_placeholder"
+                    android:textAlignment="textStart"
+                    app:layout_constraintBottom_toTopOf="@+id/cvAnswerOne"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cardView3"
+                    android:id="@+id/cvAnswerOne"
                     android:layout_width="250dp"
                     android:layout_height="48dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:background="@color/colorGreen"
                     android:elevation="0dp"
@@ -66,36 +75,35 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cardView2"
+                    android:id="@+id/cvAnswerTwo"
                     android:layout_width="250dp"
                     android:layout_height="48dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:elevation="0dp"
                     app:cardCornerRadius="32dp"
                     app:cardElevation="8dp"
                     app:cardMaxElevation="8dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/cvAnswerThree"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView3">
+                    app:layout_constraintTop_toTopOf="@+id/cvAnswerOne">
 
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cardView5"
+                    android:id="@+id/cvAnswerThree"
                     android:layout_width="250dp"
                     android:layout_height="48dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
                     android:elevation="0dp"
                     app:cardCornerRadius="32dp"
                     app:cardElevation="8dp"
                     app:cardMaxElevation="8dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/rbGroup"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView2">
+                    app:layout_constraintStart_toStartOf="parent">
 
                 </androidx.cardview.widget.CardView>
 
@@ -103,33 +111,33 @@
                     android:id="@+id/txtMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="48dp"
                     android:text="TextView"
                     android:textColor="@color/colorRed"
                     android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView5" />
+                    app:layout_constraintHorizontal_bias="0.502"
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <RadioGroup
                     android:id="@+id/rbGroup"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     android:elevation="10dp"
                     android:padding="0dp"
+                    app:layout_constraintBottom_toTopOf="@+id/txtMessage"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <RadioButton
                         android:id="@+id/rbAnswerOne"
                         android:layout_width="match_parent"
                         android:layout_height="48dp"
                         android:layout_marginLeft="8dp"
-                        android:layout_marginTop="8dp"
                         android:elevation="10dp"
                         android:fontFamily="sans-serif-medium"
                         android:text="answerOne"
@@ -164,6 +172,20 @@
                         android:textSize="18sp" />
 
                 </RadioGroup>
+
+                <TextView
+                    android:id="@+id/txtScore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:letterSpacing="0.1"
+                    android:textAlignment="textEnd"
+                    android:textColor="@color/colorGreen"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
