--- a/app/src/main/res/layout/fragment_test_home.xml
+++ b/app/src/main/res/layout/fragment_test_home.xml
@@ -21,14 +21,14 @@
             android:layout_height="wrap_content">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/btnProfileImage"
+                android:id="@+id/btnProfileImageTest"
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:layout_gravity="right"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="16dp"
                 android:elevation="4dp"
-                android:src="@drawable/tzuyu"
+                android:src="@mipmap/tzuyu"
                 app:civ_border_color="#FFFFFF"
                 app:civ_border_width="1dp" />
 
