--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -213,7 +213,7 @@
                                 android:layout_marginStart="16dp"
                                 android:layout_marginTop="16dp"
                                 android:fontFamily="sans-serif-medium"
-                                android:text="My Lists"
+                                android:text="My Words"
                                 android:textColor="@color/common_google_signin_btn_text_dark_default"
                                 android:textSize="20sp"
                                 app:layout_constraintBottom_toTopOf="@+id/textView12"
