--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -10,30 +10,35 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="300dp"
-        android:layout_height="384dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="1dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="108dp"
         app:cardElevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/txtChineseCharacter"
                 android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_height="0dp"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center|center_horizontal|center_vertical"
                 android:text="@string/phrase_placeholder"
                 android:textAlignment="center"
-                android:textSize="64dp" />
+                android:textSize="64dp"
+                app:layout_constraintBottom_toTopOf="@+id/txtPinyin"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/txtPinyin"
@@ -41,151 +46,152 @@
                 android:layout_height="wrap_content"
                 android:text="pinyin"
                 android:textAlignment="center"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/txtProgress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
+                android:layout_marginBottom="32dp"
                 android:text="@string/progress_placeholder"
-                android:textAlignment="textStart" />
+                android:textAlignment="textStart"
+                app:layout_constraintBottom_toTopOf="@+id/fabDone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:progressBarStyleHorizontal"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
+                android:elevation="16dp"
+                android:progress="0"
+                android:progressDrawable="@drawable/circle"
+                android:translationZ="90dp"
+                app:layout_constraintBottom_toBottomOf="@+id/fabDone"
+                app:layout_constraintEnd_toEndOf="@+id/fabDone"
+                app:layout_constraintHorizontal_bias="0.464"
+                app:layout_constraintStart_toStartOf="@+id/fabDone"
+                app:layout_constraintTop_toTopOf="@+id/fabDone" />
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    style="?android:progressBarStyleHorizontal"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:elevation="16dp"
-                    android:progress="0"
-                    android:progressDrawable="@drawable/circle"
-                    android:translationZ="90dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/fabDone"
-                    app:layout_constraintEnd_toEndOf="@+id/fabDone"
-                    app:layout_constraintHorizontal_bias="0.464"
-                    app:layout_constraintStart_toStartOf="@+id/fabDone"
-                    app:layout_constraintTop_toTopOf="@+id/fabDone" />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fabDone"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="48dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:clickable="true"
+                android:elevation="16dp"
+                android:focusable="auto"
+                android:src="@drawable/baseline_done_white_48"
+                app:backgroundTint="@color/colorGreen"
+                app:elevation="8dp"
+                app:fabCustomSize="64dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:rippleColor="#80FFFFFF"
+                app:tint="#FFFFFF" />
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fabDone"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_gravity="bottom"
-                    android:layout_margin="18dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:clickable="true"
-                    android:elevation="16dp"
-                    android:focusable="auto"
-                    android:src="@drawable/baseline_done_white_48"
-                    app:backgroundTint="@color/colorGreen"
-                    app:elevation="8dp"
-                    app:fabCustomSize="64dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:rippleColor="#80FFFFFF"
-                    app:tint="#FFFFFF" />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fabAnswer"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="bottom"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="48dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:clickable="true"
+                android:elevation="0dp"
+                android:focusable="auto"
+                android:src="@drawable/outline_visibility_off_white_48"
+                app:backgroundTint="@android:color/transparent"
+                app:borderWidth="0dp"
+                app:elevation="0dp"
+                app:fabCustomSize="64dp"
+                app:hoveredFocusedTranslationZ="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:maxImageSize="24dp"
+                app:pressedTranslationZ="0dp"
+                app:rippleColor="@color/colorBlue"
+                app:tint="@color/colorBlue" />
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fabAnswer"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_gravity="bottom"
-                    android:layout_margin="18dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:clickable="true"
-                    android:elevation="0dp"
-                    android:focusable="auto"
-                    android:src="@drawable/outline_visibility_off_white_48"
-                    app:backgroundTint="@android:color/transparent"
-                    app:borderWidth="0dp"
-                    app:elevation="0dp"
-                    app:fabCustomSize="64dp"
-                    app:hoveredFocusedTranslationZ="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:maxImageSize="24dp"
-                    app:pressedTranslationZ="0dp"
-                    app:rippleColor="@color/colorBlue"
-                    app:tint="@color/colorBlue" />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fabSave"
+                style="@style/Widget.MaterialComponents.FloatingActionButton"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="20dp"
+                android:layout_marginBottom="48dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:clickable="true"
+                android:elevation="0dp"
+                android:focusable="auto"
+                android:src="@drawable/outline_bookmark_border_white_48"
+                app:backgroundTint="@android:color/transparent"
+                app:borderWidth="0dp"
+                app:elevation="0dp"
+                app:fabCustomSize="64dp"
+                app:hoveredFocusedTranslationZ="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:maxImageSize="24dp"
+                app:pressedTranslationZ="0dp"
+                app:rippleColor="@android:color/holo_orange_dark"
+                app:tint="@color/colorYellow" />
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/fabSave"
-                    style="@style/Widget.MaterialComponents.FloatingActionButton"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_gravity="bottom"
-                    android:layout_margin="18dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:clickable="true"
-                    android:elevation="0dp"
-                    android:focusable="auto"
-                    android:src="@drawable/outline_bookmark_border_white_48"
-                    app:backgroundTint="@android:color/transparent"
-                    app:borderWidth="0dp"
-                    app:elevation="0dp"
-                    app:fabCustomSize="64dp"
-                    app:hoveredFocusedTranslationZ="0dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:maxImageSize="24dp"
-                    app:pressedTranslationZ="0dp"
-                    app:rippleColor="@android:color/holo_orange_dark"
-                    app:tint="@color/colorYellow" />
+            <TextView
+                android:id="@+id/txtSavedMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Saved!"
+                android:textColor="@color/colorYellow"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/fabSave"
+                app:layout_constraintEnd_toEndOf="@+id/fabSave"
+                app:layout_constraintStart_toStartOf="@+id/fabSave" />
 
-                <TextView
-                    android:id="@+id/txtSavedMessage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Saved!"
-                    android:textColor="@color/colorYellow"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toTopOf="@+id/fabSave"
-                    app:layout_constraintEnd_toEndOf="@+id/fabSave"
-                    app:layout_constraintStart_toStartOf="@+id/fabSave" />
+            <TextView
+                android:id="@+id/txtUnsavedMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Unsaved!"
+                android:textColor="@color/colorYellow"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/fabSave"
+                app:layout_constraintEnd_toEndOf="@+id/fabSave"
+                app:layout_constraintStart_toStartOf="@+id/fabSave" />
 
-                <TextView
-                    android:id="@+id/txtAnswerMessage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Here's a hint..."
-                    android:textColor="@color/colorBlue"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toTopOf="@+id/fabAnswer"
-                    app:layout_constraintEnd_toEndOf="@+id/fabAnswer"
-                    app:layout_constraintStart_toStartOf="@+id/fabAnswer" />
+            <TextView
+                android:id="@+id/txtAnswerMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:text="Here's a hint..."
+                android:textColor="@color/colorBlue"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/fabAnswer"
+                app:layout_constraintEnd_toEndOf="@+id/fabAnswer"
+                app:layout_constraintStart_toStartOf="@+id/fabAnswer" />
 
-                <TextView
-                    android:id="@+id/txtUnsavedMessage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Unsaved!"
-                    android:textColor="@color/colorYellow"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toTopOf="@+id/fabSave"
-                    app:layout_constraintEnd_toEndOf="@+id/fabSave"
-                    app:layout_constraintStart_toStartOf="@+id/fabSave" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -211,38 +217,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnDropTable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="droptable"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-    <Button
-        android:id="@+id/btnAddValues"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="10dp"
-        android:text="addvalues"
-        app:layout_constraintEnd_toStartOf="@+id/btnShowValues"
-        app:layout_constraintStart_toEndOf="@+id/btnDropTable"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-    <Button
-        android:id="@+id/btnShowValues"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:text="showvalues"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <TextView
         android:id="@+id/textView3"
