--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -10,12 +10,14 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="300dp"
-        android:layout_height="384dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="128dp"
-        android:layout_marginEnd="1dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="108dp"
         app:cardElevation="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -32,7 +34,7 @@
                 <TextView
                     android:id="@+id/txtChineseCharacter"
                     android:layout_width="200dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginStart="50dp"
                     android:layout_marginEnd="50dp"
@@ -111,7 +113,7 @@
                     android:id="@+id/txtMessage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="48dp"
+                    android:layout_marginBottom="32dp"
                     android:text="TextView"
                     android:textColor="@color/colorRed"
                     android:textStyle="bold"
@@ -251,13 +253,13 @@
         style="?android:progressBarStyleHorizontal"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginTop="335dp"
         android:elevation="8dp"
         android:progress="0"
         android:progressDrawable="@drawable/circle"
         android:translationZ="90dp"
+        app:layout_constraintBottom_toBottomOf="@+id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
