--- a/app/src/main/res/layout/phrase_row.xml
+++ b/app/src/main/res/layout/phrase_row.xml
@@ -34,12 +34,11 @@
         android:id="@+id/txtPhraseEn"
         android:layout_width="64dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
         android:text="en"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <TextView
@@ -68,7 +67,7 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:letterSpacing="0.1"
         android:text="ENGLISH"
@@ -82,7 +81,7 @@
         android:id="@+id/imageButton"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
         android:adjustViewBounds="false"
         android:background="@color/transparent"
         android:cropToPadding="true"
