--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -34,7 +34,7 @@
                 android:gravity="center|center_horizontal|center_vertical"
                 android:text="@string/phrase_placeholder"
                 android:textAlignment="center"
-                android:textSize="64dp"
+                android:textSize="64sp"
                 app:layout_constraintBottom_toTopOf="@+id/txtPinyin"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -188,19 +188,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-            </LinearLayout>
-
-        </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <TextView
