--- a/app/src/main/res/layout/fragment_test_home.xml
+++ b/app/src/main/res/layout/fragment_test_home.xml
@@ -28,7 +28,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="16dp"
                 android:elevation="4dp"
-                app:civ_border_color="#FFFFFF"
+                app:civ_border_color="@color/colorRed"
                 app:civ_border_width="1dp" />
 
 
@@ -94,7 +94,7 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/txtLevelOne"
+                                android:id="@+id/txtLevelOneTest"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -103,11 +103,11 @@
                                 android:lineSpacingExtra="0dp"
                                 android:padding="0dp"
                                 android:text="@string/numbers_level"
-                                android:textSize="10dp"
+                                android:textSize="10sp"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/textView5"
+                                android:id="@+id/txtNumbersTest"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -117,7 +117,7 @@
                                 android:textSize="24sp" />
 
                             <TextView
-                                android:id="@+id/textView6"
+                                android:id="@+id/txtNumbersDescriptionTest"
                                 android:layout_width="192dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -142,12 +142,14 @@
 
                             <Button
                                 android:id="@+id/btnStartNumbers"
-                                style="@style/Widget.MaterialComponents.Button"
+                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="16dp"
                                 android:layout_marginRight="4dp"
-                                android:text="@string/button_start" />
+                                android:text="@string/button_start"
+                                android:textColor="@color/colorRed"
+                                app:iconTint="@color/colorRed" />
                         </LinearLayout>
                     </LinearLayout>
 
@@ -172,7 +174,7 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/txtLevelTwo"
+                                android:id="@+id/txtLevelTwoTest"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -181,11 +183,11 @@
                                 android:lineSpacingExtra="0dp"
                                 android:padding="0dp"
                                 android:text="@string/essentials_level"
-                                android:textSize="10dp"
+                                android:textSize="10sp"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/textView5"
+                                android:id="@+id/txtEssentialsTest"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -195,7 +197,7 @@
                                 android:textSize="24sp" />
 
                             <TextView
-                                android:id="@+id/textView6"
+                                android:id="@+id/txtEssentialsDescriptionTest"
                                 android:layout_width="192dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -220,12 +222,14 @@
 
                             <Button
                                 android:id="@+id/btnStartGreetings"
-                                style="@style/Widget.MaterialComponents.Button"
+                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="16dp"
                                 android:layout_marginRight="4dp"
-                                android:text="@string/button_start" />
+                                android:text="@string/button_start"
+                                android:textColor="@color/colorRed"
+                                app:iconTint="@color/colorRed" />
                         </LinearLayout>
                     </LinearLayout>
 
@@ -259,11 +263,11 @@
                                 android:lineSpacingExtra="0dp"
                                 android:padding="0dp"
                                 android:text="@string/food_level"
-                                android:textSize="10dp"
+                                android:textSize="10sp"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/textView5"
+                                android:id="@+id/txtFoodTest"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -273,7 +277,7 @@
                                 android:textSize="24sp" />
 
                             <TextView
-                                android:id="@+id/textView6"
+                                android:id="@+id/txtFoodDescriptionTest"
                                 android:layout_width="192dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -298,12 +302,14 @@
 
                             <Button
                                 android:id="@+id/btnStartFood"
-                                style="@style/Widget.MaterialComponents.Button"
+                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="16dp"
                                 android:layout_marginRight="4dp"
-                                android:text="@string/button_start" />
+                                android:text="@string/button_start"
+                                android:textColor="@color/colorRed"
+                                app:iconTint="@color/colorRed" />
                         </LinearLayout>
                     </LinearLayout>
 
@@ -328,7 +334,7 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:id="@+id/txtLevelThree"
+                                android:id="@+id/txtLevelFourTest"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -337,11 +343,11 @@
                                 android:lineSpacingExtra="0dp"
                                 android:padding="0dp"
                                 android:text="@string/emergency_level"
-                                android:textSize="10dp"
+                                android:textSize="10sp"
                                 android:textStyle="bold" />
 
                             <TextView
-                                android:id="@+id/textView5"
+                                android:id="@+id/txtHelpTest"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -351,7 +357,7 @@
                                 android:textSize="24sp" />
 
                             <TextView
-                                android:id="@+id/textView6"
+                                android:id="@+id/txtHelpDescriptionTest"
                                 android:layout_width="192dp"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="8dp"
@@ -367,7 +373,7 @@
                             android:orientation="vertical">
 
                             <ImageView
-                                android:id="@+id/ivFood"
+                                android:id="@+id/ivHelp"
                                 android:layout_width="72dp"
                                 android:layout_height="72dp"
                                 android:layout_marginLeft="0dp"
@@ -376,12 +382,14 @@
 
                             <Button
                                 android:id="@+id/btnStartHelp"
-                                style="@style/Widget.MaterialComponents.Button"
+                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="16dp"
                                 android:layout_marginRight="4dp"
-                                android:text="@string/button_start" />
+                                android:text="@string/button_start"
+                                android:textColor="@color/colorRed"
+                                app:iconTint="@color/colorRed" />
                         </LinearLayout>
                     </LinearLayout>
 
