--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -45,7 +45,7 @@
                     android:layout_marginEnd="16dp"
                     android:elevation="4dp"
                     app:civ_border_color="@color/colorBlue"
-                    app:civ_border_width="1dp"
+                    app:civ_border_width="2dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,6 +67,7 @@
                 android:id="@+id/hsvCards"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="4dp"
                 android:scrollbars="none">
 
                 <LinearLayout
@@ -83,8 +84,8 @@
                         android:layout_margin="8dp"
                         android:elevation="4dp"
                         app:cardCornerRadius="4dp"
-                        app:cardElevation="6dp"
-                        app:cardMaxElevation="8dp">
+                        app:cardElevation="4dp"
+                        app:cardMaxElevation="4dp">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/linearLayout"
@@ -135,8 +136,8 @@
                         android:layout_marginBottom="8dp"
                         android:elevation="4dp"
                         app:cardCornerRadius="4dp"
-                        app:cardElevation="6dp"
-                        app:cardMaxElevation="8dp">
+                        app:cardElevation="4dp"
+                        app:cardMaxElevation="4dp">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/linearLayout2"
@@ -189,8 +190,8 @@
                         android:layout_marginBottom="8dp"
                         android:elevation="4dp"
                         app:cardCornerRadius="4dp"
-                        app:cardElevation="6dp"
-                        app:cardMaxElevation="8dp">
+                        app:cardElevation="4dp"
+                        app:cardMaxElevation="4dp">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/linearLayout3"
