--- a/app/src/main/res/layout/fragment_my_list.xml
+++ b/app/src/main/res/layout/fragment_my_list.xml
@@ -72,7 +72,6 @@
                     android:clipToPadding="false"
                     android:elevation="8dp"
                     android:layoutAnimation="@anim/layout_animation"
-                    android:minHeight="112dp"
                     android:outlineProvider="bounds"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -218,14 +217,14 @@
                     android:id="@+id/txtPlaceholder"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
                     android:elevation="10dp"
                     android:text="your words will appear here"
                     android:textColor="@color/default_inactive_shape_color"
                     android:translationZ="10dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/rvMyWords"
                     app:layout_constraintEnd_toEndOf="@+id/rvMyWords"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/rvMyWords" />
+                    app:layout_constraintTop_toBottomOf="@+id/cvBg" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
