--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -59,6 +59,12 @@
         <action
             android:id="@+id/action_navigation_learning_to_navigation_home"
             app:destination="@id/navigation_home" />
+        <action
+            android:id="@+id/action_navigation_learning_to_navigation_my_list_fragment"
+            app:destination="@id/navigation_my_list_fragment" />
+        <action
+            android:id="@+id/action_navigation_learning_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
     </fragment>
 
 
